Added User Authentication

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,6 +1,26 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.sitename{
+  float: left;
+  display: inline;
+}
+.login{
+  float: right;
+  display: inline;
+}
+
+.content {
+  clear: left;
+  display: block;
+}
+.info{
+  float: left;
+  clear: left;
+  display: inline;
+}
+
+.signup{
+  float: left;
+  clear: left;
+  display: block;
 }
 
 a {
