--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,24 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.sitename {
+  float: left;
+  display: inline;
+}
+.login {
+  float: right;
+  display: inline;
+}
+.content {
+  clear: left;
+  display: block;
+}
+.info {
+  float: left;
+  clear: left;
+  display: inline;
+}
+.signup {
+  float: left;
+  clear: left;
+  display: block;
 }
 a {
   color: #00B7FF;
