Added Authentication and Sessions Tracking

--- a/views/busIndex.html
+++ b/views/busIndex.html
@@ -13,7 +13,7 @@
       <div class='business/login'>
         <form action='/business/login' method='POST'>
           <input type='text' name='username' placeholder='Username'>
-          <input type='text' name='password' placeholder='Password'>
+          <input type='password' name='password' placeholder='Password'>
           <input type='submit' value='Login'>
         </form>
       </div>
@@ -35,7 +35,7 @@
           <div><input type='text' name='email' placeholder='Email'></div>
           <div><input type='text' name='phoneNumber'placeholder='Phone Number'></div>
           <div><input type='text' name='username' placeholder='Username'></div>
-          <div><input type='text' name='password' placeholder='Password'></div>
+          <div><input type='password' name='password' placeholder='Password'></div>
           <div><input type='submit' value='Submit'></div>
         </form>
       </div>
