--- a/views/userDashboard.html
+++ b/views/userDashboard.html
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    
+  <a href="/logout"><button type='button'>Logout</button></a>
    YOU MADE IT!!!!
 
   </body>
