--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
       <div class='login'>
         <form action='/login' method='POST'>
           <input type='text' name='username' placeholder='Username'>
-          <input type='text' name='password' placeholder='Password'>
+          <input type='password' name='password' placeholder='Password'>
           <input type='submit' value='Login'>
         </form>
       </div>
@@ -30,7 +30,7 @@
           <div><input type='text' name='email' placeholder='Email'></div>
           <div><input type='text' name='phoneNumber'placeholder='Phone Number'></div>
           <div><input type='text' name='username' placeholder='Username'></div>
-          <div><input type='text' name='password' placeholder='Password'></div>
+          <div><input type='password' name='password' placeholder='Password'></div>
           <div><input type='submit' value='Submit'></div>
         </form>
       </div>
