--- a/views/busIndex.html
+++ b/views/busIndex.html
@@ -8,20 +8,21 @@
     
     <div class='header'>
       <div class='sitename'>
-        <h1>groupeats</h1>
+        <h1>GroupEats</h1>
       </div>
+      Business Login:
       <div class='business/login'>
         <form action='/business/login' method='POST'>
           <input type='text' name='username' placeholder='Username'>
-          <input type='password' name='password' placeholder='Password'>
+          <div><input type='password' name='password' placeholder='Password'></div>
           <input type='submit' value='Login'>
         </form>
       </div>
-      <div><a href="/business">Business Users</a></div>
     </div>
 
     <div class='content'>
-      <div class='info'>Business Users</div>
+
+      <p></p>
       <div class='signup'>
         Business Signup:
         <form action='/business/signup' method='POST'>
