Changed to Pronto

--- a/views/busIndex.html
+++ b/views/busIndex.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GroupEats</title>
+    <title>Pronto</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     
     <div class='header'>
       <div class='sitename'>
-        <h1>GroupEats</h1>
+        <h1>Pronto</h1>
       </div>
       Business Login:
       <div class='business/login'>
