--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GroupEats</title>
+    <title>Pronto</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>GroupEats</h1>
-    <p>Welcome to GroupEats!</p>
+    <h1>Pronto</h1>
+    <p>Welcome to Pronto!</p>
   </body>
 </html>
