--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GroupEats</title>
+    <title>Pronto</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     
     <div class='header'>
       <div>
-        <h1 class='sitename'>GroupEats</h1>
+        <h1 class='sitename'>Pronto</h1>
         <p></p>
         <p></p>
       </div>
