--- a/views/userDashboard.html
+++ b/views/userDashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GroupEats</title>
+    <title>Pronto</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
