Added Styling - Removed Date

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -24,6 +24,19 @@ html {
   float: right;
 }
 
+.step1 {
+  width: 200px
+}
+
+.step2 {
+  width: 400px
+}
+
+.step3 {
+  width: 200px
+}
+
+
 table {
   text-align: center;
   margin-right: auto;
