--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
       <div>
         <h1 class='sitename'>Pronto</h1>
         <p></p>
+        <a href="/about">How it works</a>
         <p></p>
       </div>
       <div class='login'>
