--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,15 @@ html {
 .logout {
   float: right;
 }
+.step1 {
+  width: 200px;
+}
+.step2 {
+  width: 400px;
+}
+.step3 {
+  width: 200px;
+}
 table {
   text-align: center;
   margin-right: auto;
